<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="esta_es_la_segunda_activity">Esta es la segunda activity</string>
    <string name="segundo_texto">Segundo texto</string>
    <string name="labs_screen_title">Práctica curso Introducción a Android</string>
    <string name="laboratorio_1">Laboratorio 1</string>
    <string name="desafio_2">Desafio 2</string>
    <string name="desafio_1">Desafio 1</string>
    <string name="laboratorio_3">Laboratorio 3</string>
    <string name="laboratorio_2">Laboratorio 2</string>
    <string name="sumar">Sumar</string>
    <string name="toast_message">Boton sumar presionado!</string>
    <string name="ingresar_contrase_a">Ingresar contraseña</string>
    <string name="ingresar_usuario">Ingresar usuario</string>
    <string name="crear_usuario">Crear usuario</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="dd_mm_aaaa">dd/mm/AAAA</string>
    <string name="ingresa_tu_contrase_a">Ingresa tu contraseña</string>
    <string name="mantener_sesi_n_iniciada">Mantener sesión iniciada</string>
    <string name="tu_usuario">Tu usuario</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="proyecto_integrador">Proyecto integrador</string>
    <string name="user_label_login">Ingresar usuario</string>
    <string name="user_hint_login">Su usuario</string>
    <string name="password_label_login">Ingresar contraseña</string>
    <string name="password_hint_login">Su contraseña</string>
    <string name="remember_user_label_login">Recordar usuario</string>
    <string name="create_user_button_login_text">Crear usuario</string>
    <string name="signin_button_login_text">Iniciar sesión</string>
    <string name="using_toolbar">Usando toolbar</string>
    <string name="mark_as_favorite">Mark as Favorite</string>
    <string name="terms_and_conditions_title">Términos y condiciones</string>
    <string name="terms_and_conditions_test_content">Este es un texto de prueba solamente para poder previsualizarlo en el editor pero no se va a ver en la ejecucion</string>
    <string name="books_app_title">Books App</string>
    <string name="my_books_title">Mis Libros</string>
    <string name="add_book">Add book</string>
    <string name="add_book_title">Agregar Libro</string>
    <string name="save">Guardar</string>
    <string name="author_hint">Autor del libro</string>
    <string name="author_label">Autor</string>
    <string name="book_title_hint">Titulo del libro</string>
    <string name="title_name">Nombre del libro</string>
</resources>